Use `ImmutableMap` and `ImmutableSet` for consistent collections handling in `TaintAnalysisCPA` and `TaintAnalysisUtils`.