@@ -8,6 +8,7 @@
 
 package org.sosy_lab.cpachecker.cpa.taintanalysis;
 
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import java.util.Map;
 import org.checkerframework.checker.nullness.qual.Nullable;
@@ -56,6 +57,6 @@ public class TaintAnalysisCPA extends AbstractCPA implements ProofCheckerCPA {
   public AbstractState getInitialState(CFANode node, StateSpacePartition partition)
       throws InterruptedException {
     return new TaintAnalysisState(
-        ImmutableSet.of(), ImmutableSet.of(), Map.of(), ImmutableSet.of());
+        ImmutableSet.of(), ImmutableSet.of(), ImmutableMap.of(), ImmutableSet.of());
   }
 }
